# metal-cli

./: AGENT.md  Cargo.toml  README.md
examples/: ergodic-2state.json  hodge-triangle.json  renorm-uniform8.json  sheaf-triangle.json
src/: main.rs
tests/: integration.rs
